- [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
- [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
- [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
- [MINOR] Add checkMode method to msaltestapp infra (#2141)
- [MINOR] Update TokenRequest.java with NAA params (#2143)
- [MINOR] Add new apk name to BrokerHost infra (#2152)

V.14.0.1
----------
- [PATCH] Reverting token removal logic (#2117)

V.14.0.0
----------
- [PATCH] Make AndroidWrappedKeyLoader return the right alias (#2102)
- [PATCH] Read private key before public key to avoid OS bug (#2091)
- [PATCH] Add new CryptoFactoryName and ClientException error code (#2094)
- [PATCH] also clear cached timestamp in ActiveClientBrokerCache (#2075)
- [PATCH] Fix NPE when Content-Type header is missing in HTTP response (#2079)
- [MINOR] Fix issue for MSA only where headers are not propagated on web requests with different domain redirects on newer versions of WebView (88+) (#2072)
- [PATCH] Add method to return list of broker that supports account manager (#2073)
- [MINOR] Send client id as part of request bundle for getSsoToken Api (#2064)
- [MAJOR] Wire new Broker Discovery Client into MSAL - still disabled by default (#2057)
- [MINOR] Add support to run UI automation on MsalTestApp  (#2056)
- [MINOR] Move ATS span start/end to MicrosoftAuthServiceOperation (#2068)
- [MINOR] Move AT interactive span start/end to Account Chooser (#2069)
- [PATCH] Fix AbstractMethodError in makeCurrentSpan for otel (#2083)
- [MINOR] Emit number of concurrent silent requests in telemetry (#2093)
- [PATCH] Fix missing visibility of the LTW app (#2097)
- [MINOR] Add support to MsalTestApp for selecting Auth Scheme, Click Generate SHR & remove user button (#2103)
- [MINOR] Add span names for storage and encryption spans (#2104)
- [MINOR] Invalid required broker protocol version check in Acquire Token/Acquire Token Silent (#2101)