@@ -20,6 +20,7 @@ V.15.0.0
 - [MINOR] Add checkMode method to msaltestapp infra (#2141)
 - [MINOR] Update TokenRequest.java with NAA params (#2143)
 - [MINOR] Add new apk name to BrokerHost infra (#2152)
+- [MINOR] Replace the usage of Arrays.stream to use non-Java8 APIs in common (#2162)
 
 V.14.0.1
 ----------
